# operational-semantics

./: README.md
implementations/L1/: L1.opam  README.md  dune-project
implementations/L1/lib/: dune  grammar.ml  inference.ml  interpreter.ml  store.ml  store.mli  types.ml  utils.ml
implementations/L1/test/: dune
implementations/L2/: dune-project
implementations/L2/lib/: context.ml  dune  grammar.ml  inference.ml  interpreter.ml  store.ml  store.mli  substitution.ml  substitution.mli  types.ml  utils.ml
implementations/L2/test/: dune
implementations/L3/: dune-project
implementations/L3/lib/: dune
implementations/L3/test/: dune
